# ww-fx-dropout

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  UI_MATCHING_FEATURES.md  VERIFICATION_REPORT.md  build-info.json  config.json  daemon_interactive.py  face_filters.py  index.html  interactive_filters.py  requirements-test.txt  requirements.txt  standalone-wasm.html  standalone.html  update_checker.py  web_server.py
archive/: README.md  standalone.html
archive/python-backend/: face_filters.py  generate_comparison.py  interactive_filters.py  logger.py  test_daemon_logging.py  web_server.py
archive/python-files/: Makefile  requirements.txt
archive/scripts-backend/: dev_server.py  validate_filters.py
archive/tests-websocket/: test_filter_processing.py  test_web_e2e.py
archive/websocket-version/: filters.js  index.html
assets/icons/: README.md
docs/: DAEMON_README.md  README.md  UI_OVERHAUL.md  WASM_MIGRATION.md  WASM_README.md  filter_validation.md  testing.md
scenes/: dropout.json  scenes.json  wesworld.json
scripts/: generate_build_info.py  generate_icons.sh  validate_filters.py  watch_wasm.py
src/: face_filters.py  web_server.py
static/: index.html
static/js/: wwfx-wasm.js
static/wasm/: wwfx_module.js  wwfx_module.wasm
tests/: __init__.py  conftest.py  test_filter_processing.py  test_web_e2e.py
themes/: default.json  dropout.json  wesworld.json
wasm/: CMakeLists.txt  build.sh
wasm/include/: filters.h  image_processing.h
wasm/src/: filters.cpp  image_processing.cpp  wasm_bindings.cpp
